OODT-896 fix inefficient constructors